<resources>
    <string name="app_name">CityShare</string>
    <string name="Bienvenida">Bienvenido a City Share</string>
    <string name="IngresoDatos">Ingrese su usuario y contraseña</string>
    <string name="Correo">Correo</string>
    <string name="PSW">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="signup">Crear cuenta</string>
    <string name="crearcuenta">¡Crea una cuenta!</string>
    <string name="password">Contraseña</string>
    <string name="confirmPassword">Confirma tu contraseña</string>
    <string name="historias">Mis historias</string>
    <string name="chat">Chat</string>
    <string name="register"><b><u>Regístrate aquí</u></b></string>
    <string name="newUser">¿Eres nuevo?</string>
    <string name="contraseñaOlvidada">¿Olvidó su contraseña?</string>
    <string name="user">Usuario</string>
    <string name="send">Enviar</string>
    <string name="retos">Retar</string>
    <string name="name_profile">Ricardo Richardson</string>
    <string name="welcome">Bienvenido</string>
    <string name="guess">Selecciona donde crees que está</string>
    <string name="estado">Estado: </string>
    <string name="adivinanzas"><b>No. adivinanzas: </b></string>
    <string name="distancia"><b>Dist. promedio: </b></string>
    <string name="enviar">Enviar</string>
    <string name="suma">más</string>
    <string name="nombre">Kevin Android</string>
    <string name="ems">Escribe un mensaje</string>
    <string name="challenges">Retos</string>
    <string name="stats">Ver Estadisticas</string>
    <string name="close">Cerrar</string>
    <string name="adivin"><b>Adivina!</b></string>
    <string name="score">Score</string>
    <string name="yourStory">Tu historia</string>
    <string name="loginBienvenido">¡Bienvenido de nuevo!</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="volver">Volver</string>
    <string name="nombre1">Nombre</string>
    <string name="SI">Seleccionar Imagen</string>
    <string name="YCT">Ya casi terminas!</string>

</resources>