<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".ChatActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:background="@drawable/edit_t"
            android:src="@drawable/fotop"
            android:layout_marginRight="20dp">

        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textColor="#000000"
            android:textSize="30sp">

        </TextView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/suma"
            android:layout_weight="0.2"
            android:padding="10dp"
            android:src="@drawable/plus"
            android:layout_marginRight="10dp">

        </ImageButton>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_weight="0.2"
            android:contentDescription="@string/retar"
            android:minHeight="48dp"
            android:padding="10sp"
            android:src="@drawable/retop"
            android:layout_marginRight="10dp">

        </ImageButton>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_t"
            android:layout_weight="0.8">

            <EditText
                android:layout_width="204dp"
                android:layout_height="48sp"
                android:layout_marginRight="10dp"
                android:hint="@string/ems"
                android:minHeight="48sp">

            </EditText>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@null"
                android:contentDescription="@string/enviar"
                android:minHeight="48dp"
                android:padding="10sp"
                android:src="@drawable/sendp"
                android:layout_marginLeft="10dp">

            </ImageButton>
        </FrameLayout>

    </LinearLayout>

</LinearLayout>