<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".preguessActivity">


    <ImageView
        android:id="@+id/userStory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/adivin"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/coliseo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:background="@null"
            android:padding="10sp"
            android:src="@drawable/fotop">

        </ImageView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yourStory"
                android:textColor="#FFFFFF"
                android:textSize="20sp">

            </TextView>

            <Button
                android:id="@+id/pista"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:text="Agregar pista" />
        </LinearLayout>



    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_gravity="end"
        android:background="@null"
        android:contentDescription="@string/close"
        app:srcCompat="@drawable/equis"
        tools:ignore="TouchTargetSizeCheck" />

</FrameLayout>