<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buttonFoto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_principal" />

    <Button
        android:id="@+id/botonHistorias"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/montserrat"
        android:onClick="launchStoryActivity"
        android:text="@string/historias"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/botonChat"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/montserrat"
        android:onClick="launchChatActivity"
        android:text="@string/retos"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/botonPost"
        android:layout_width="34dp"
        android:layout_height="28dp"
        android:layout_marginStart="316dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:onClick="launchPostsActivity"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/camera" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="18dp"
        android:background="@null"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar_principal" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/name_profile"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209" />

    <TextView
        android:id="@+id/regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="108dp"
        android:layout_height="96dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/puntos_principal" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="108dp"
        android:layout_height="96dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/partidas_principal" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="108dp"
        android:layout_height="96dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/dist_principal" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="132dp"
        android:layout_height="211dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="48dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/add_photo" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="132dp"
        android:layout_height="211dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="48dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:srcCompat="@drawable/photo_post0" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="132dp"
        android:layout_height="211dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="48dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:srcCompat="@drawable/photo_post1" />

    <ImageButton
        android:id="@+id/signout"
        android:layout_width="34dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/signout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/botonPost"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/signout" />


</androidx.constraintlayout.widget.ConstraintLayout>